<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.EQActivity">

        <LinearLayout
            android:id="@+id/ll_eq_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eq_gain"
                android:textSize="15sp"
                android:textColor="#000000"
                android:background="@drawable/bg_input" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eq_freq"
                android:textSize="16sp"
                android:textColor="#000000"
                android:background="@drawable/bg_input" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eq_bw"
                android:textSize="15sp"
                android:textColor="#000000"
                android:background="@drawable/bg_input" />

            <TextView
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/eq_type"
                android:textSize="16sp"
                android:textColor="#000000"
                android:background="@drawable/bg_input" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eq_bypass"
                android:textSize="15sp"
                android:textColor="#000000"
                android:background="@drawable/bg_input" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_eq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_rate"
                android:textSize="17sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/et_sample_rate"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_input"
                android:gravity="center"
                android:inputType="number"
                android:textColor="#000000"
                android:textSize="17sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_visualize_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/visualize_response"/>

        <LinearLayout
            android:id="@+id/ll_chart_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp">

        </LinearLayout>

    </LinearLayout>
</layout>
