<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.CompressorActivity">
    
    <data>
        
    </data>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tv_threshold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/threshold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_threshold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_input"/>
            
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tv_ratio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ratio"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_ratio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_input"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tv_kneewidth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/kneewidth"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_kneewidth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_input"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_visual_static_curve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/visual_static_curve"/>



        <LinearLayout
            android:id="@+id/ll_chart_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <com.tzw.eq.view.StaticCharacteristicView
                android:id="@+id/static_characteristic_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>



    </LinearLayout>



</layout>